
vala_files = [
    'main.vala',
    'LocalAdapter.vala',
    'CaribouInterface.vala',
    'Window.vala',
    'KeyboardGrid.vala',
    'LevelGrid.vala',
    'KeyButton.vala',
    'SuggestionWidget.vala'
]

executable(
    meson.project_name(),
    vala_files,
    dependencies : dependencies,
    install: true
)
